# loom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  00_READ_ME_FIRST.txt  00_START_HERE_RESEARCH_703.txt  ALERTING_SETUP.md  ANALYSIS_VERIFICATION.md  ARTIFACTS_MANIFEST.md  AUDIT_CHANGES_SUMMARY.md  AUDIT_IMPLEMENTATION.md  AUDIT_QUICK_START.md  AUDIT_REPORT_SWARM_FINAL.md  AUTHENTICATION_QUICK_START.md  BACKUP_SYSTEM_CHECKLIST.md  BACKUP_USAGE_QUICK_START.md  BATCH_31_80_TEST_RESULTS.json  BATCH_QUEUE_GUIDE.md  BATCH_QUEUE_QUICKSTART.md  BENCHMARK_LEADERBOARD_GUIDE.md  BENCHMARK_QUICK_REFERENCE.txt  BENCHMARK_TOOLS_REFERENCE.txt  BLOCKCHAIN_REPOS_INDEX.md  BLOCKCHAIN_RESEARCH.txt  BRAIN_ARCHITECTURE_OPUS.md  BRAIN_DECISION_RECORDS.md  BRAIN_OPUS_IMPROVEMENTS.md  BRAIN_QUICK_REFERENCE.md  BRAIN_REVIEW_INDEX.md  BRAIN_REVIEW_SUMMARY.txt  BRAIN_VERIFICATION_OPUS.md  CHANGELOG.md  CICD_IMPLEMENTATION.md  CIRCUIT_BREAKER_USAGE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSISTENCY_PRESSURE_GUIDE.md  CONTRIBUTING.md  DARKWEB_INTEGRATION_RESEARCH.txt  DATA_EXTRACTION_REPOS_FULL_LIST.md  DEADLETTER_INTEGRATION.md  (+243 more)
.github/: CICD.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ai_actions/: all_todos.txt  kimi_type_errors.md  run_log.txt
assessments/: ABLITERATED_INTEGRATION_AUDIT.md  ASK_ALL_ROUNDS.md  RESOURCE_INVENTORY.md
completions/: README.md  install.sh  loom.bash  loom.fish  loom.zsh
dashboard/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
deploy/: .env.example  README.md  install.sh  loom-gateway.service  loom-logrotate.conf  loom-v3.service  loom.service
docs/: ADR-005-AI-Safety-Red-Teaming-Tools.md  AI-SAFETY-TOOLS-INDEX.md  ANALYTICS.md  API_REFERENCE.md  API_REFERENCE_V2.md  ARCHITECTURE_DESIGN.md  BILLING_ASYNC_MIGRATION.md  BILLING_POSTGRES_INTEGRATION.md  COMPETITIVE_ANALYSIS_704.md  COMPLETE_TOOL_GUIDE.md  COMPOSER_GUIDE.md  COMPOSER_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  CREATIVE_IDEAS_ALL_MODELS.md  CREDENTIAL_VAULT.md  CROSS_MATCH_ANALYSIS.md  DESIGN-SUMMARY.md  ERROR_WRAPPER_USAGE.md  FULL_AUDIT_REPORT.md  GENERATION_REPORT.md  GUI_OPTIONS_AND_INTEGRATION.md  GUI_QUICK_START.md  IDEMPOTENCY.md  IMPLEMENTATION-CHECKLIST.md  JWT_INTEGRATION_GUIDE.md  JWT_SERVER_INTEGRATION_EXAMPLE.md  LOCAL_MODEL_TECHNIQUES_SPEC.md  LOGGING.md  LOOM_TOOLS_SKILL.md  MCP_UI_EVALUATION.md  MUTATION_TESTING_GUIDE.md  NEXT_STEPS.md  PARAM_AUTO_CORRECTION.md  PARAM_CORRECTOR_QUICK_REFERENCE.md  PIPELINE_ENHANCER.md  PLUGIN_LOADER.md  POSTGRESQL_BILLING_WIRING.md  PRIVACY_ANTI_FORENSICS_TOOLS.md  PRIVACY_RESEARCH_REPORT.md  PRODUCTION_READINESS.md  (+82 more)
examples/: README.md  arabic_routing_example.py  backup_example.py  bulk_arxiv.py  cloudflare_bypass.py  composer_examples.py  config_tuning.py  dashboard_usage.py  deep_research.py  dspy_bridge_usage.py  error_wrapper_demo.py  harvest_model_cards.py  instructor_extraction_example.py  jwt_auth_example.py  llm_translate.py  logging_integration_example.py  loom-redteam.yml  otel_integration.py  param_corrector_usage.py  progress_streaming_demo.py  quickstart.py  session_login.py  session_replay_demo.py
gateway/: ARCHITECTURE.md  INDEX.md  README.md  __init__.py  auth.py  config.py  example_usage.py  health.py  router.py  server.py  test_integration.py
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_list_1.txt  .graphify_chunk_list_2.txt  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  redis.yaml  secret.yaml  service.yaml
microservices/: .env.example  Dockerfile  README.md  STRUCTURE.txt  docker-compose.yml
monitoring/: DEPLOYMENT_CHECKLIST.md  INDEX.md  MANIFEST.md  QUICKSTART.md  README.md  alerting-rules.yml  alertmanager.yml  docker-compose.yml  grafana-dashboard.json  grafana-provisioning-dashboards.yml  grafana-provisioning-datasources.yml  prometheus.yml  setup.sh
release-notes/: v0.1.0-alpha.1.md
scripts/: EMAIL_TOOL_RESULTS_README.md  INDEX.txt  LOAD_TEST_QUICKSTART.md  LOAD_TEST_README.md  NEW_TOOL_SCAFFOLD.md  PARAM_CONVENTIONS.md  QUICK_START.md  README_PIPELINE.md  REAL_QUERY_TEST_README.md  REQ_011_015_VERIFICATION_README.md  RESEARCH_689_QUICKSTART.md  STRATEGY_TOOLS_README.md  STRESS_TEST_README.md  TRIPLE_VALIDATE_README.md  UMMRO_PR_WORKFLOW.md  aggressive_test.py  aggressive_test_v3.py  analyze_load_test.py  analyze_previous_test.py  analyze_test_report.py  ask_creative_dark.py  benchmark.py  benchmark_10q.py  check-registration-duplicates.py  comprehensive_test_200.py  contract_test.py  darkness_probe.py  deploy_research_695.sh  deploy_research_704.sh  deploy_to_hetzner.sh  dev-server.sh  discover_and_test_all.py  dr_test.sh  dubai_live_test.py  dump_all_outputs.py  dump_sequential.py  edge_case_verification.py  email_tool_results.py  execute_all_test_types.py  extract_brain_index.py  (+106 more)
sdk/: CHANGELOG.md  INDEX.md  INSTALL.md  MANIFEST.txt  QUICK_START.md  README.md  SDK_STRUCTURE.md  STRUCTURE.md  VERIFICATION.md  pyproject.toml
sdk/examples/: 01_basic_search.py  02_deep_research.py  03_multi_llm.py  04_bulk_fetch.py  05_prompt_reframe.py  basic_usage.py
sdk/loom_sdk/: __init__.py  client.py  models.py
sdk/src/loom_sdk/: __init__.py  client.py  models.py
sdk/tests/: __init__.py  test_client.py
tests/: README.md  conftest.py  conftest_analytics.py  deep_research_test.py  journey_e2e.py  journey_full.py  test_adversarial_debate.py  test_agent_benchmark.py  test_alerting.py  test_analytics.py  test_api_auth.py  test_arabic.py  test_arabic_refusal.py  test_async_tool_runner.py  test_attack_persuasion.py  test_attack_scorer.py  test_attack_tracker.py  test_audit.py  test_audit_export.py  test_auth.py  test_backup_manager.py  test_batch_queue.py  test_benchmarks.py  test_billing.py  test_billing_module.py  test_bpj_generator.py  test_cache.py  test_cache_compression.py  test_cache_eviction.py  test_cache_hitrate.py  (+197 more)
(+1744 files in other folders)
