[project]
name = "loom-sdk"
version = "0.1.0"
description = "Python SDK for Loom MCP research server — async client for search, fetch, deep research, and multi-LLM queries"
authors = [{ name = "Ahmed Adel Bakr Alderai" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = [
  "loom",
  "mcp",
  "research",
  "sdk",
  "python-client",
  "web-scraping",
  "search",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.28",
  "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "pytest-httpx>=0.30",
  "ruff>=0.7",
  "mypy>=1.13",
  "pre-commit>=4",
]

[project.urls]
Homepage = "https://github.com/aadelb/loom"
Documentation = "https://github.com/aadelb/loom/blob/main/sdk/README.md"
Repository = "https://github.com/aadelb/loom"
Issues = "https://github.com/aadelb/loom/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["loom_sdk"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "ASYNC",
  "S",   # flake8-bandit (security)
]
ignore = [
  "E501",  # long lines OK
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_unused_ignores = false
