[project]
name = "loom-sdk"
version = "0.1.0"
description = "Official Python SDK client for Loom MCP research server"
authors = [
    { name = "Ahmed Adel Bakr Alderai" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "loom",
    "mcp",
    "client",
    "sdk",
    "research",
    "scraping",
    "search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.12",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4",
]

[project.urls]
Homepage = "https://github.com/aadelb/loom"
Documentation = "https://github.com/aadelb/loom#readme"
Repository = "https://github.com/aadelb/loom"

[build-system]
requires = [
    "hatchling>=1.25",
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/loom_sdk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/loom_sdk",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "ASYNC",
    "S",
]
ignore = [
    "S101",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S",
    "B018",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = false
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/loom_sdk",
    "--cov-report=term-missing",
]
markers = [
    "unit: marks unit tests",
    "integration: marks integration tests",
    "slow: marks tests as slow",
]
